--- a/src/main/resources/templates/question_list.html
+++ b/src/main/resources/templates/question_list.html
@@ -5,11 +5,13 @@
     <title>Title</title>
 </head>
 <body>
+
+<idv>
+    [[${value}]]
+</idv>
+<div th:text="${value}"></div>
 <ul>
-    <li>질문1</li>
-    <li>질문2</li>
-    <li>질문3</li>
-    <li>질문1231234</li>
+    <li th:each="num : ${list}" th:text="${num}"></li>  <!--반복문-->
 </ul>
 </body>
 </html>
